--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root{
+:root {
 
     /* Colors */
 
@@ -15,13 +15,13 @@
     --White: hsl(0, 0%, 100%);
 
     /* Edited */
-    --Cyan-1: hsla(178, 100%, 50%, 0.5);
+    --Cyan-1: hsla(178, 100%, 50%, 0.4);
     --Very-dark-blue-4: hsla(218, 50%, 10%, 0.7);
     --Very-dark-blue-5: hsla(217, 54%, 10%, 0.45);
 
 }
 
-body{
+body {
     font-family: 'Outfit', sans-serif;
     font-size: 18px;
     background-color: var(--Very-dark-blue-1);
@@ -29,7 +29,7 @@ body{
 }
 
 /* Styling Overall Container */
-#main{
+#main {
     background-color: var(--Very-dark-blue-2);
     width: 22%;
     margin: 0 auto;
@@ -39,7 +39,11 @@ body{
 }
 
 /* Styling Image */
-#img1{
+#pic {
+    position: relative;
+}
+
+#img1 {
     width: 100%;
     height: 130%;
     border-radius: 8px;
@@ -50,96 +54,198 @@ body{
 }
 
 #pic1 {
-    transition: .5s ease;
-    position: absolute;
-    transform: translate(0px,-298px);
+    width: 266px;
+    max-width: 100%;
+    height: 266px;
     background-color: var(--Cyan-1);
-    padding: 120px 122px;
     border-radius: 8px;
-    opacity: 0; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: .5s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+}
+
+#img2 {
+    width: 50px;
+    height: 50px;
 }
   
 #pic:hover #pic1 {
     opacity: 1;
 }
 
-
-
 /* Styling Body */
-h3{
+h3 {
     color: var(--White);
     cursor: pointer;
 }
 
-h3:hover{
+h3:hover {
     color: var(--Cyan);
 }
 
-p{
+p {
     color: var(--Soft-blue);
+    font-size: 16px;
 }
 
-#balance{
+#balance {
     display: flex;
     justify-content: space-between;
     margin-bottom: 25px;
 }
 
-#top_left{
+#top_left {
     color: var(--Cyan);
+    margin-left: 5px;
 }
 
-#top_right{
+#top_right {
+    color: var(--Soft-blue);
+    margin-left: 5px;
+}
+
+#bottom_left {
     color: var(--Soft-blue);
 }
 
-#bottom_left{
-    color: var(--Soft-blue);
-}
-
-#bottom_right{
+#bottom_right {
     color: var(--White);
     cursor: pointer;
 }
 
-#bottom_right:hover{
+#bottom_right:hover {
     color: var(--Cyan);
 }
 
-hr{
+hr {
     border-width: 0;
     height: 1px;
     background-color: var(--Very-dark-blue-3);
 }
 
-#bottom{
+#bottom {
     display: flex;
     align-items: center;
     gap: 20px;
-    margin-top: 15px;
+    margin-top: 18px;
 }
 
-#image{
+#image {
     width: 30px;
     height: 30px;
     border: 2px solid var(--White);
     border-radius: 50%;
 }
 
+.attribution { 
+    font-size: 11px; 
+    text-align: center; 
+    margin-top: 100px;
+    color: white;
+}
+
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
+
+
 /* Responsiveness */
-@media screen and (max-width:450px){
-    #main{
+@media screen and (min-width:900px) and (max-width:1200px) {
+    #main {
+        width: 35%;
+        box-shadow: 0 10px 0 25px var(--Very-dark-blue-5);
+    }
+
+    #pic1 {
+        width: 351px;
+        max-width: 100%;
+        height: 351px;
+        max-height: 100%;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+}
+
+@media screen and (min-width:750px) and (max-width:900px) {
+    #main {
+        width: 40%;
+        box-shadow: 0 10px 0 25px var(--Very-dark-blue-5);
+    }
+
+    #pic1 {
+        width: 351px;
+        max-width: 100%;
+        height: 351px;
+        max-height: 100%;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+}
+
+@media screen and (min-width:650px) and (max-width:750px) {
+    #main {
+        width: 50%;
+        box-shadow: 0 10px 0 25px var(--Very-dark-blue-5);
+    }
+
+    #pic1 {
+        width: 351px;
+        max-width: 100%;
+        height: 351px;
+        max-height: 100%;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+}
+
+@media screen and (min-width:500px) and (max-width:650px) {
+    #main {
+        width: 61%;
+        box-shadow: 0 10px 0 25px var(--Very-dark-blue-5);
+    }
+
+    #pic1 {
+        width: 351px;
+        max-width: 100%;
+        height: 351px;
+        max-height: 100%;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+}
+
+@media screen and (max-width:500px) {
+    #main {
         width: 75%;
         box-shadow: 0 10px 0 25px var(--Very-dark-blue-5);
     }
-    
-    #pic1{
-        transform: translate(0px,-292px);
-        padding: 117px 119px;
+
+    #pic1 {
+        width: 351px;
+        max-width: 100%;
+        height: 351px;
+        max-height: 100%;
     }
 
-    #clock{
-        margin-right: 5px;
+    p {
+        font-size: 16px;
     }
+
 }
-
